[gd_scene load_steps=22 format=3 uid="uid://nq620eyn5jk"]

[ext_resource type="Script" path="res://Player.gd" id="1_s44i8"]
[ext_resource type="Texture2D" uid="uid://bxrqfq3vy2tg" path="res://CrossHair.png" id="2_rtyu2"]
[ext_resource type="Texture2D" uid="uid://ykrf1o6jswwe" path="res://D_Damage.png" id="3_c0u0s"]
[ext_resource type="Script" path="res://SFX.gd" id="4_4ee2t"]
[ext_resource type="AudioStream" uid="uid://lgaf42ogngsv" path="res://Hurt1.ogg" id="5_gw5g3"]
[ext_resource type="PackedScene" uid="uid://dcerb2l2eaj1d" path="res://Slapper.tscn" id="5_v2hn7"]
[ext_resource type="AudioStream" uid="uid://bgwvwcsm8gph8" path="res://footstep1.ogg" id="6_cnu8t"]
[ext_resource type="AudioStream" uid="uid://tevag2c1n34i" path="res://Hurt2.ogg" id="6_d826l"]
[ext_resource type="AudioStream" uid="uid://dxk5opjm6pasr" path="res://footstep2.ogg" id="7_0upj2"]
[ext_resource type="AudioStream" uid="uid://dvwslqt03fwb6" path="res://Slap.ogg" id="7_y5ac8"]
[ext_resource type="AudioStream" uid="uid://cxkp38ggphhnl" path="res://Death.ogg" id="8_rgjfb"]
[ext_resource type="AudioStream" uid="uid://b183f2nb6ap8c" path="res://footstep3.ogg" id="8_s6p5h"]
[ext_resource type="AudioStream" uid="uid://choojvhhegbm6" path="res://PickupArmor.ogg" id="8_x64hr"]
[ext_resource type="AudioStream" uid="uid://dyeb4uhsel3sb" path="res://footstep4.ogg" id="9_pcylp"]

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_sew1q"]
resource_local_to_scene = true
albedo_color = Color(0.517647, 0.686275, 1, 1)

[sub_resource type="SphereMesh" id="SphereMesh_qjlay"]
material = SubResource( "StandardMaterial3D_sew1q" )
radius = 0.25
height = 0.5
radial_segments = 16
rings = 8

[sub_resource type="CapsuleMesh" id="CapsuleMesh_nys8q"]
material = SubResource( "StandardMaterial3D_sew1q" )
radius = 0.25
height = 1.25
radial_segments = 16

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_tpboj"]
radius = 0.251
height = 1.75

[sub_resource type="SphereShape3D" id="SphereShape3D_gths8"]
radius = 0.25

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_3if3p"]
radius = 0.25
height = 1.25

[sub_resource type="SphereShape3D" id="SphereShape3D_5kwlu"]
radius = 0.30253

[node name="Player" type="CharacterBody3D"]
collision_layer = 2
collision_mask = 3
script = ExtResource( "1_s44i8" )
__meta__ = {
"_edit_horizontal_guides_": [450.0, 900.0, 540.0],
"_edit_vertical_guides_": [768.0]
}

[node name="Head" type="MeshInstance3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.5, 0)
layers = 4
mesh = SubResource( "SphereMesh_qjlay" )
skeleton = NodePath("../../..")

[node name="Body" type="MeshInstance3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.625, 0)
layers = 4
mesh = SubResource( "CapsuleMesh_nys8q" )
skeleton = NodePath("../../..")

[node name="CharacterCollision" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.875, 0)
shape = SubResource( "CapsuleShape3D_tpboj" )

[node name="DamageCollision" type="Area3D" parent="."]
collision_layer = 4
collision_mask = 4

[node name="HeadCollision" type="CollisionShape3D" parent="DamageCollision"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.5, 0)
shape = SubResource( "SphereShape3D_gths8" )

[node name="BodyCollision" type="CollisionShape3D" parent="DamageCollision"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.625, 0)
shape = SubResource( "CapsuleShape3D_3if3p" )

[node name="CameraHelper" type="Node3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.47593, 0)

[node name="Recoil" type="Node3D" parent="CameraHelper"]
transform = Transform3D(1, 0, 0, 0, 0.988494, -0.151261, 0, 0.151261, 0.988494, 0, 0, 0)

[node name="RecoilTimer" type="Timer" parent="CameraHelper/Recoil"]
one_shot = true

[node name="Camera" type="Camera3D" parent="CameraHelper/Recoil"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -0.25)
cull_mask = 1048571
current = true
near = 0.01

[node name="HUD" type="Control" parent="CameraHelper/Recoil/Camera"]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="TextureRect" type="TextureRect" parent="CameraHelper/Recoil/Camera/HUD"]
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 760.0
offset_top = 532.0
offset_right = -760.0
offset_bottom = -352.0
texture = ExtResource( "2_rtyu2" )
ignore_texture_size = true

[node name="Health" type="Label" parent="CameraHelper/Recoil/Camera/HUD"]
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 26.0
offset_top = 26.0
offset_right = -1369.0
offset_bottom = -783.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(0.615686, 0, 0, 1)
theme_override_font_sizes/font_size = 72
text = "200"
__meta__ = {
"_edit_layout_mode": 1,
"_edit_use_custom_anchors": false
}

[node name="Mag" type="Label" parent="CameraHelper/Recoil/Camera/HUD"]
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 1355.0
offset_top = 761.0
offset_right = -54.0
offset_bottom = -69.0
theme_override_font_sizes/font_size = 48
text = "12/12"
horizontal_alignment = 2
vertical_alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TotalAmmo" type="Label" parent="CameraHelper/Recoil/Camera/HUD"]
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 1381.0
offset_top = 817.0
offset_right = -56.0
offset_bottom = -30.0
theme_override_font_sizes/font_size = 36
text = "36"
horizontal_alignment = 2
vertical_alignment = 1

[node name="Damage" type="Sprite2D" parent="CameraHelper/Recoil/Camera/HUD"]
modulate = Color(1, 1, 1, 0)
position = Vector2(768, 450)
texture = ExtResource( "3_c0u0s" )

[node name="ShootCast" type="RayCast3D" parent="CameraHelper/Recoil"]
transform = Transform3D(1, 0, 0, 0, 0.988494, 0.151261, 0, -0.151261, 0.988494, 0, 0, -0.25)
visible = false
target_position = Vector3(0, 0, -100)
collision_mask = 5
hit_from_inside = true
collide_with_areas = true

[node name="SlapArea" type="Area3D" parent="CameraHelper/Recoil"]
transform = Transform3D(1, 0, 0, 0, 0.988494, 0.151261, 0, -0.151261, 0.988494, 0, 0, 0)
collision_layer = 8
collision_mask = 4
input_ray_pickable = false
monitorable = false

[node name="Collision" type="CollisionShape3D" parent="CameraHelper/Recoil/SlapArea"]
transform = Transform3D(1, 0, 0, 0, 1, 1.49011e-08, 0, -1.49011e-08, 1, 0, -1.19209e-07, -0.674995)
shape = SubResource( "SphereShape3D_5kwlu" )

[node name="Slapper" parent="CameraHelper/Recoil" instance=ExtResource( "5_v2hn7" )]
transform = Transform3D(0.986551, -0.0607031, -0.151761, 0.00491707, 0.939081, -0.34366, 0.163377, 0.338292, 0.926751, 0.151, -0.148, -0.422)
visible = false

[node name="WalkTimer" type="Timer" parent="."]
one_shot = true

[node name="WalkSFX" type="Node" parent="."]
script = ExtResource( "4_4ee2t" )

[node name="Walk1" type="AudioStreamPlayer" parent="WalkSFX"]
stream = ExtResource( "6_cnu8t" )
volume_db = -18.0
pitch_scale = 0.85
bus = &"SFX"

[node name="Walk2" type="AudioStreamPlayer" parent="WalkSFX"]
stream = ExtResource( "7_0upj2" )
volume_db = -18.0
pitch_scale = 0.85
bus = &"SFX"

[node name="Walk3" type="AudioStreamPlayer" parent="WalkSFX"]
stream = ExtResource( "8_s6p5h" )
volume_db = -18.0
pitch_scale = 0.85
bus = &"SFX"

[node name="Walk4" type="AudioStreamPlayer" parent="WalkSFX"]
stream = ExtResource( "9_pcylp" )
volume_db = -18.0
pitch_scale = 0.85
bus = &"SFX"

[node name="HealthSFX" type="Node" parent="."]
script = ExtResource( "4_4ee2t" )

[node name="Health" type="AudioStreamPlayer" parent="HealthSFX"]
stream = ExtResource( "8_x64hr" )
volume_db = -10.0
pitch_scale = 1.52
bus = &"SFX"

[node name="Slap" type="AudioStreamPlayer" parent="."]
stream = ExtResource( "7_y5ac8" )
volume_db = 6.0
bus = &"SFX"

[node name="HurtTimer" type="Timer" parent="."]
one_shot = true

[node name="HurtSFX" type="Node" parent="."]
script = ExtResource( "4_4ee2t" )

[node name="Hurt1" type="AudioStreamPlayer" parent="HurtSFX"]
stream = ExtResource( "5_gw5g3" )
volume_db = 5.0
bus = &"SFX"

[node name="Hurt2" type="AudioStreamPlayer" parent="HurtSFX"]
stream = ExtResource( "6_d826l" )
volume_db = 2.0
bus = &"SFX"

[node name="DeathSFX" type="Node" parent="."]
script = ExtResource( "4_4ee2t" )

[node name="Death1" type="AudioStreamPlayer" parent="DeathSFX"]
stream = ExtResource( "8_rgjfb" )
bus = &"SFX"

[connection signal="timeout" from="CameraHelper/Recoil/RecoilTimer" to="." method="_reset_recoil"]
[connection signal="slap" from="CameraHelper/Recoil/Slapper" to="." method="_slap"]
